--- a/sparcs_descriptives.ipynb
+++ b/sparcs_descriptives.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sparcs=pd.read_csv('https://health.data.ny.gov/resource/gnzp-ekau.csv')"
+    "sparcs=pd.read_csv('https://health.data.ny.gov/resource/gnzp-ekau.csv') #used csv link from API"
    ]
   },
   {
